--- a/assets/scss/layout/_wrapFiled.scss
+++ b/assets/scss/layout/_wrapFiled.scss
@@ -53,6 +53,7 @@
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     max-height: 200px;
+    text-align: justify;
 }
 
 .descriptItemField {
